@@ -1,5 +1,12 @@
 2006-10-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scheme-wrapper.c
+	* plug-ins/script-fu/script-fu-console.c: use g_fopen() from gstdio.h.
+
+	* plug-ins/script-fu/script-fu-scripts.c: removed unused defines.
+
+2006-10-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/scripts/distress-selection.scm: changed range
 	for Smoothness value as suggested in bug #363381. Also fixed a typo
 	in the menu label.
